<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_weight="0">

    <ImageView
        android:id="@+id/classroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_desc"
        android:scaleType="fitStart"
        android:src="@mipmap/imagepencil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="126dp"
        android:contentDescription="@string/logo_desc"
        android:src="@mipmap/educarebrusa"
        app:layout_constraintLeft_toLeftOf="@id/classroom"
        app:layout_constraintTop_toTopOf="@id/classroom"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp" />

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/classroom"
        android:lineSpacingMultiplier="1"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColorLink="#303F9F"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classroom"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:lineSpacingMultiplier="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/email"
        android:textColorLink="#303F9F"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apptitle"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/url"
        android:textColorLink="#303F9F"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/url"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:text="@string/description"
        android:textColor="#303F9F"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url" />
    <ImageView
        android:id="@+id/facebooklogo"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:background="#3A8F3E"
        android:src="@mipmap/facebooklogo"
        tools:layout_editor_absoluteY="693dp"
        android:tag="@string/facebook_link"
        android:onClick="openBrowser"
        android:contentDescription="@string/logo_fb"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
